Added getServices and getServiceById end points
